[project]
authors = [{ name = "quantity-dev contributors" }]
dependencies = []
name = "quantity-api"
requires-python = ">= 3.12"
version = "0.0.1.dev0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
quantity_api = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
optype = ">=0.9.0,<0.10"
